[package]
name = "egui_transition_animation"
version = "0.1.0"
edition = "2021"
authors = ["FireFragment"]
description = "Easy animated transitions between multiple pages in egui"
repository = "https://github.com/FireFragment/egui_transition_animation"
license = "GPL-3.0-or-later"
keywords = ["egui", "animation", "transition", "ui", "gui"]
categories = ["gui"]

[dev-dependencies]
eframe = "0.29.1"
env_logger = "0.11.5"

[dependencies]
egui = "0.29.1"
