[package]
name = "egui_transition_animation"
version = "0.1.2"
edition = "2021"
authors = ["FireFragment"]
description = "Easy animated transitions between multiple pages in egui"
repository = "https://github.com/FireFragment/egui_transition_animation"
license = "GPL-3.0-or-later"
keywords = ["egui", "animation", "transition", "ui", "gui"]
categories = ["gui"]

[dev-dependencies]
eframe = "0.30.0"
env_logger = "0.11.6"

[dependencies]
egui = "0.30.0"
